--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -14,7 +14,7 @@
 .navbar {
     width: 100%;
     margin: 0;
-    padding: 15px;
+    padding: 20px 15px;
     box-sizing: border-box;
     flex-shrink: 0;
     display: flex;
