--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,5 @@ button:focus-visible {
 }
 
 html, body, #root {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  min-height: 100%;
 }
